--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>注册</title>
+    <title>用户注册</title>
     <link rel="stylesheet" href="bt/css/bootstrap.min.css">
     <link rel="stylesheet" href="bt/css/bootstrap-theme.min.css">
     <script type="text/javascript" src="bt/js/jquery.js"></script>
@@ -12,16 +12,20 @@
 <div class="container">
     <form>
         <div class="form-group">
-            <label for="exampleInputEmail1">用户名</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            <label for="exampleInputUsername">用户名</label>
+            <input type="text" class="form-control" id="exampleInputUsername" placeholder="username">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail">邮箱</label>
+            <input type="email" class="form-control" id="exampleInputEmail" placeholder="email">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">密码</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="password">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword2">重复密码</label>
-            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="password">
         </div>
         <input id="sub" class="btn btn-success form-control" type="button" value="注册">
     </form>
@@ -33,16 +37,24 @@
 
     $("#sub").click(function() {
 
-        var userName = $("#exampleInputEmail1").val();
+        var userName = $("#exampleInputUsername").val();
         var passWord = $("#exampleInputPassword1").val();
         var rePassWord = $("#exampleInputPassword2").val();
-
+        var email=$("#exampleInputEmail").val();
+        var check_email = /^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
         // 用户名是不是为空
         if(userName.length == 0) {
             alert("用户名不能为空")
             return; // 不让程序继续往下执行了
         }
-
+        if(email.length == 0) {
+            alert("邮箱不能为空")
+            return; // 不让程序继续往下执行了
+        }
+        if(!check_email.test(email)){
+            alert("邮箱格式不对")
+            return;
+        }
         // 密码是不是为空
         if(passWord.length == 0) {
             alert("密码不能为空")
@@ -58,7 +70,8 @@
         // 封装数据，并提交给后端接口
         var user = {
             "username" : userName,
-            "password" : passWord
+            "password" : passWord,
+            "email":    email
         }
 
         // 将实体类转换为JSON
@@ -66,12 +79,9 @@
 
         // 提交给后端接口
         $.post({
-            url: 'user/register',
+            url: '/user/register',
             data: userJson,
             contentType: 'application/json',
-            success: function (data) {
-                alert(data)
-            }
         });
 
     })
